homework8/svcAndIngress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: httpserver
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: httpserver
  selector:
      app: golang
      release: test-go-httpserver
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
  labels:
    app: httpserver
  name: httpserver
spec:
  rules:
    - host: httpserver.cncamp.com
      http:
        paths:
          - backend:
              service:
                name: httpserver
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - httpserver.cncamp.com
      secretName: cncamp-tls
